--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "intercom/intercom-php",
+    "name": "andrea-wood/intercom-php",
     "description": "Intercom API client built on top of HTTPlug",
     "keywords": [
         "api",
